<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBack">

                <TextView
                    android:id="@+id/textView"
                    style="@style/Title_quest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:gravity="center_horizontal"
                    android:text="@string/bulgakov_title" />

                <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:maxWidth="200dp"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     android:contentDescription="@string/bulgakov_drawing1"
                     app:srcCompat="@drawable/bulgakov_fragment1" />

                <TextView
                    android:id="@+id/fragment_bulgakov_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/bulgakov_fragment1_text1"
                    style="@style/Text_quest"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:maxWidth="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                app:srcCompat="@mipmap/ic_faq_foreground"
                android:contentDescription="@string/bulgakov_icon_quest" />

            <TextView
                android:id="@+id/fragment_bulgakov_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/bulgakov_fragment1_text2"
                style="@style/Text_quest"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:maxWidth="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                app:srcCompat="@mipmap/ic_bulb_foreground"
                android:contentDescription="@string/bulgakov_icon_result"/>

            <EditText
                android:id="@+id/result1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:textColor="@color/colorWite"
                android:importantForAutofill="no"
                android:backgroundTint="@color/colorWite"
                android:inputType="textPersonName"
                android:hint="@string/bulgakov_editText" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>